--- a/src/main/webapp/approve_use_or_borrow.html
+++ b/src/main/webapp/approve_use_or_borrow.html
@@ -217,13 +217,14 @@
     }
     //console.log("temp_data=\n"+temp_data);
     temp_data = json2Array(temp_data, false)  // 主表格数据
+    console.log("temp_data=\n"+temp_data);
 
     const dataSets = [];
     $(document).ready(function() {
         $(function(){
             var table = $('#table').DataTable({
                 retrieve: true,
-                data:dataSet,
+                data:temp_data,
                 columns:[
                     {
                         'field': "purchase_requisition_id",
@@ -406,6 +407,41 @@
 
             // 点击 物品清单
             $("table tbody").on("click",".list-btn",function (){
+                var tds=$(this).parents("tr").children();
+                temp_order_id = tds[1].innerText;
+                // 向后端请求物品清单数据
+                $.ajax({
+                    async: false,  // true 异步，false 同步
+                    data: {order_id: temp_order_id},
+                    type: "post",
+                    url : "getorborrow/initBorrowListTable",
+                    success : function(data) {
+                        //console.log("--flag-initListTable-");
+                        temp_list_data=data.data;
+                        temp_list_data = json2Array(temp_list_data, true)
+                    }
+                });
+                // 更新表格数据
+                $('#listTable').dataTable().api().clear();
+                $('#listTable').dataTable().api().rows.add(temp_list_data);
+                $('#listTable').dataTable().api().draw();
+
+                $.ajax({
+                    async: false,  // true 同步，false异步
+                    data: {order_id: temp_order_id},
+                    type: "post",
+                    url : "purchase/initPurchaseListTable",
+                    success : function(data) {
+                        //console.log("--flag-initListTable-");
+                        temp_list_data=data.data;
+                        temp_list_data = json2Array(temp_list_data, true)
+                    }
+                })
+                // 更新表格数据
+                $('#listTable').dataTable().api().clear();
+                $('#listTable').dataTable().api().rows.add(temp_list_data);
+                $('#listTable').dataTable().api().draw();
+
 
                 $('#updateModal').modal('show');
             })
@@ -436,7 +472,7 @@
                             // 获取当前登陆的用户id
                             console.log("front_end_data="+front_end_data);
                             // 把前端数据传给后端
-                            $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
+                            $.post("approve/borrowApproveOver", front_end_data, function (data) {
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
                                     alert("提交成功");
@@ -463,22 +499,21 @@
                     if(confirm('确认审核不通过？')){  //确认提交
                         // 拼后端BeanUtils所需的map串
                         var front_end_data = "";
-                        if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
-                        if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
-                        if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
-                        if (tds[5].innerText !== "") front_end_data += "&state="+tds[5].innerText+"&";
-                        if (tds[6].innerText !== "") front_end_data += "&approval_user_id="+tds[6].innerText+"&";
-                        if (tds[7].innerText !== "") front_end_data += "&approval_opinions="+tds[7].innerText+"&";
-                        if (tds[8].innerText !== "") front_end_data += "&approval_date="+tds[8].innerText+"&";
-                        // front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
+                        if (tds[0].innerText !== "") front_end_data += "get_or_borrow_requisition_id="+tds[0].innerText+"&";
+                        // if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
+                        // if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
+                        // if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
+                        if (tds[5].innerText !== "") front_end_data += "state="+2+"&";
+                        if (tds[6].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
+                        if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
+                        if (tds[8].innerText !== "") front_end_data += "approval_date="+tds[8].innerText+"&";
+                        front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
 
                         $.get("user/findOne", {}, function (data) {
                             // 获取当前登陆的用户id
-                            front_end_data += "requisition_user_id="+data.user_id;
                             console.log("front_end_data="+front_end_data);
                             // 把前端数据传给后端
-                            $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
+                            $.post("approve/borrowApproveOver", front_end_data, function (data) {
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
                                     alert("提交成功");
