--- a/src/main/webapp/form_purchase.html
+++ b/src/main/webapp/form_purchase.html
@@ -345,18 +345,20 @@
                 var tds=$(this).parents("tr").children();
                 temp_order_id = tds[1].innerText;
                 // 向后端请求物品清单数据
-                $.ajax({
-                    async: false,  // true 同步，false异步
-                    data: {order_id: temp_order_id},
-                    type: "post",
-                    url : "purchase/initListTable",
-                    success : function(data) {
-                        //console.log("--flag-initListTable-");
-                        temp_list_data=data.data;
-                        temp_list_data = json2Array(temp_list_data, true)
-                    }
-                });
-
+                if(temp_order_id != ""){
+                    $.ajax({
+                        async: false,  // true 同步，false异步
+                        data: {order_id: temp_order_id},
+                        type: "post",
+                        url : "purchase/initListTable",
+                        success : function(data) {
+                            //console.log("--flag-initListTable-");
+                            temp_list_data=data.data;
+                            temp_list_data = json2Array(temp_list_data, true)
+                        }
+                    });
+                }
+                $('#updateModal').modal('show');
                 // 更新表格数据
                 $('#listTable').dataTable().api().clear();
                 $('#listTable').dataTable().api().rows.add(temp_list_data);
@@ -519,25 +521,12 @@
                         if (tds[8].innerText !== "")
                             approval_date = (new Date(eval(tds[8].innerText))).toLocaleString();
 
-                        // 状态改回数值
-                        var shenqing_state = '';
-                        arr = tds[5].innerText;
-                        if(arr==='未提交'){
-                            shenqing_state = '0';
-                        }else if(arr==='已提交'){
-                            shenqing_state = '1';
-                        }else if(arr==='审核通过'){
-                            shenqing_state = '2';
-                        }else if(arr==='审核未通过'){
-                            shenqing_state = '3';
-                        }
-
                         var front_end_data = "";
                         if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
                         if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
                         if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
                         if (tds[4].innerText !== "") front_end_data += "requisition_date="+requisition_dateTime+"&";
-                        if (tds[5].innerText !== "") front_end_data += "state="+shenqing_state+"&";
+                        if (tds[5].innerText !== "") front_end_data += "state="+1+"&";
                         if (tds[6].innerText !== "") front_end_data += "approval_user_id="+tds[6].innerText+"&";
                         if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
                         if (tds[8].innerText !== "") front_end_data += "approval_date="+approval_date+"&";
@@ -545,16 +534,35 @@
 
                         $.get("user/findOne", {}, function (data) {
                             // 获取当前登陆的用户id
+                            front_end_data += "requisition_user_id="+data.user_id;
                             console.log("front_end_data="+front_end_data);
                             // 把前端数据传给后端
                             $.post("purchase/createOrUpdateItems", front_end_data, function (data) {
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
                                     alert("提交成功");
+                                    location.reload();
                                     tds[5].innerText = '已提交';
                                     // 禁用按钮：应该放入点击确认
                                     $(this).attr('disabled',true);
                                     tds.find('.edit-btn').attr('disabled',true);
+
+                                    $.ajax({
+                                        async: false,
+                                        data: {user_id: temp_user_id},
+                                        type : "post",
+                                        url : "purchase/initTable",
+                                        success : function(data) {
+                                            console.log("--flag-inittable-");
+                                            temp_data=data.data;
+                                        }
+                                    });
+                                    $('#table').dataTable().api().clear();
+                                    $('#table').dataTable().api().rows.add(temp_data);
+                                    $('#table').dataTable().api().draw();
+
+
+
                                 } else {
                                     alert("提交失败");
                                 }
