采购+领用借用+废弃完成，三申请审批仍有bug

--- a/src/main/webapp/approve_purchase.html
+++ b/src/main/webapp/approve_purchase.html
@@ -12,16 +12,6 @@
     <link href="css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css?v=2.2.0" rel="stylesheet">
-    <style>
-
-        .table td{
-            word-break: break-all;
-        }
-
-        .table th{
-            word-break: break-all;
-        }
-    </style>
 </head>
 <body>
 <!--<button type="button" id="batch-edit-btn">批量编辑</button>-->
@@ -366,11 +356,6 @@
                         'defaultContent' : "",
                         'sClass': 'text-center'
                     }, {
-                        'field': "warehouse_id",
-                        'title': '仓库',
-                        'defaultContent' : "",
-                        'sClass': 'text-center'
-                    }, {
                         'field': "notes",
                         'title': '备注',
                         'defaultContent' : "",
@@ -402,9 +387,6 @@
                 }
             });
 
-            var temp_list_data;
-            var temp_order_id;  // 本条订单的order——id
-
             // 点击 物品清单
             $("table tbody").on("click",".list-btn",function (){
                 var tds=$(this).parents("tr").children();
@@ -426,22 +408,6 @@
                 $('#listTable').dataTable().api().rows.add(temp_list_data);
                 $('#listTable').dataTable().api().draw();
 
-                $.ajax({
-                    async: false,  // true 同步，false异步
-                    data: {order_id: temp_order_id},
-                    type: "post",
-                    url : "approve/initPurchaseListTable",
-                    success : function(data) {
-                        //console.log("--flag-initListTable-");
-                        temp_list_data=data.data;
-                        temp_list_data = json2Array(temp_list_data, true)
-                    }
-                })
-                // 更新表格数据
-                $('#listTable').dataTable().api().clear();
-                $('#listTable').dataTable().api().rows.add(temp_list_data);
-                $('#listTable').dataTable().api().draw();
-
 
                 $('#updateModal').modal('show');
             })
@@ -457,9 +423,6 @@
                         // 拼后端BeanUtils所需的map串
                         var front_end_data = "";
                         if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
-                        // if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
-                        // if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        // if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
                         if (tds[5].innerText !== "") front_end_data += "state="+2+"&";
                         if (tds[6].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
                         if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
@@ -475,11 +438,30 @@
                             $.post("approve/purchaseApproveOver", front_end_data, function (data) {
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
-                                    //alert("提交成功");
+                                    alert("提交成功");
+                                    location.reload();
                                     tds[5].innerText = '审核通过';
                                     // 禁用按钮：应该放入点击确认
                                     $(this).attr('disabled', true);
                                     tds.find('.edit-btn').attr('disabled', true);
+                                    tds.find('.submit-btn').attr('disabled',true);
+                                    tds.find('.not-submit-btn').attr('disabled',true);
+
+                                    $.ajax({
+                                        async: false,  // true 同步，false异步
+                                        data: {order_id: temp_order_id},
+                                        type: "post",
+                                        url : "approve/initPurchaseListTable",
+                                        success : function(data) {
+                                            //console.log("--flag-initListTable-");
+                                            temp_list_data=data.data;
+                                            temp_list_data = json2Array(temp_list_data, true)
+                                        }
+                                    });
+                                    // 更新表格数据
+                                    $('#table').dataTable().api().clear();
+                                    $('#table').dataTable().api().rows.add(temp_list_data);
+                                    $('#table').dataTable().api().draw();
                                 } else {
                                     //alert("提交失败");
                                 }
@@ -500,16 +482,13 @@
                         // 拼后端BeanUtils所需的map串
                         var front_end_data = "";
                         if (tds[0].innerText !== "") front_end_data += "purchase_requisition_id="+tds[0].innerText+"&";
-                        // if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
-                        // if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        // if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
                         if (tds[5].innerText !== "") front_end_data += "state="+3+"&";
                         if (tds[6].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
                         if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
                         if (tds[8].innerText !== "") front_end_data += "approval_date="+tds[8].innerText+"&";
                         front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
 
-                        alert("打开F12看前端发送的数据");
+                        // alert("打开F12看前端发送的数据");
                         console.log("front_end_data="+front_end_data);
 
                         $.get("user/findOne", {}, function (data) {
@@ -518,10 +497,28 @@
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
                                     alert("提交成功");
+                                    location.reload();
                                     tds[5].innerText = '审核未通过';
                                     // 禁用按钮：应该放入点击确认
                                     $(this).attr('disabled', true);
                                     tds.find('.edit-btn').attr('disabled', true);
+                                    tds.find('.submit-btn').attr('disabled',true);
+                                    tds.find('.not-submit-btn').attr('disabled',true);
+                                    $.ajax({
+                                        async: false,  // true 同步，false异步
+                                        data: {order_id: temp_order_id},
+                                        type: "post",
+                                        url : "approve/initPurchaseListTable",
+                                        success : function(data) {
+                                            //console.log("--flag-initListTable-");
+                                            temp_list_data=data.data;
+                                            temp_list_data = json2Array(temp_list_data, true)
+                                        }
+                                    });
+                                    // 更新表格数据
+                                    $('#table').dataTable().api().clear();
+                                    $('#table').dataTable().api().rows.add(temp_list_data);
+                                    $('#table').dataTable().api().draw();
                                 } else {
                                     alert("提交失败");
                                 }
@@ -550,7 +547,6 @@
 
             //申请表修改保存
             $("#table tbody").on("click",".save-btn",function(){
-                var row=table.row($(this).parents("tr"));
                 var tds=$(this).parents("tr").children();
                 $.each(tds, function(i,val){
                     var jqob=$(val);
