--- a/src/main/webapp/approve_use_or_borrow.html
+++ b/src/main/webapp/approve_use_or_borrow.html
@@ -217,7 +217,6 @@
     }
     //console.log("temp_data=\n"+temp_data);
     temp_data = json2Array(temp_data, false)  // 主表格数据
-    console.log("temp_data=\n"+temp_data);
 
     const dataSets = [];
     $(document).ready(function() {
@@ -227,19 +226,19 @@
                 data:temp_data,
                 columns:[
                     {
-                        'field': "purchase_requisition_id",
+                        'field': "get_or_borrow_requisition_id",
                         'title': '领用/借用申请表编号',
                         'defaultContent' : ""
                     }, {
-                        'field': "purchase_order_id",
+                        'field': "get_or_borrow_order_id",
                         'title': '领用/借用物品清单编号',
                         'defaultContent' : ""
                     }, {
-                        'field': "requisition_user_id",
+                        'field': "type",
                         'title': '申请单类型',
                         'defaultContent' : ""
                     },{
-                        'field': "requisition_user_id",
+                        'field': "applicant_user_id",
                         'title': '申请人',
                         'defaultContent' : ""
                     }, {
@@ -247,11 +246,11 @@
                         'title': '领用/借用用途',
                         'defaultContent' : ""
                     }, {
-                        'field': "requisition_date",
+                        'field': "borrow_date",
                         'title': '借用开始日期',
                         'defaultContent' : ""
                     },{
-                        'field': "requisition_date",
+                        'field': "return_date",
                         'title': '借用结束日期',
                         'defaultContent' : ""
                     },{
@@ -369,11 +368,6 @@
                         'defaultContent' : "",
                         'sClass': 'text-center'
                     }, {
-                        'field': "warehouse_id",
-                        'title': '仓库',
-                        'defaultContent' : "",
-                        'sClass': 'text-center'
-                    }, {
                         'field': "notes",
                         'title': '备注',
                         'defaultContent' : "",
@@ -414,29 +408,13 @@
                     async: false,  // true 异步，false 同步
                     data: {order_id: temp_order_id},
                     type: "post",
-                    url : "getorborrow/initBorrowListTable",
+                    url : "approve/initBorrowListTable",
                     success : function(data) {
                         //console.log("--flag-initListTable-");
                         temp_list_data=data.data;
                         temp_list_data = json2Array(temp_list_data, true)
                     }
                 });
-                // 更新表格数据
-                $('#listTable').dataTable().api().clear();
-                $('#listTable').dataTable().api().rows.add(temp_list_data);
-                $('#listTable').dataTable().api().draw();
-
-                $.ajax({
-                    async: false,  // true 同步，false异步
-                    data: {order_id: temp_order_id},
-                    type: "post",
-                    url : "purchase/initPurchaseListTable",
-                    success : function(data) {
-                        //console.log("--flag-initListTable-");
-                        temp_list_data=data.data;
-                        temp_list_data = json2Array(temp_list_data, true)
-                    }
-                })
                 // 更新表格数据
                 $('#listTable').dataTable().api().clear();
                 $('#listTable').dataTable().api().rows.add(temp_list_data);
@@ -457,32 +435,44 @@
                         // 拼后端BeanUtils所需的map串
                         var front_end_data = "";
                         if (tds[0].innerText !== "") front_end_data += "get_or_borrow_requisition_id="+tds[0].innerText+"&";
-                        // if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
-                        // if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        // if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
-                        if (tds[5].innerText !== "") front_end_data += "state="+2+"&";
-                        if (tds[6].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
-                        if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
-                        if (tds[8].innerText !== "") front_end_data += "approval_date="+tds[8].innerText+"&";
+                        if (tds[8].innerText !== "") front_end_data += "state="+2+"&";
+                        if (tds[9].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
+                        if (tds[10].innerText !== "") front_end_data += "approval_opinions="+tds[10].innerText+"&";
+                        if (tds[11].innerText !== "") front_end_data += "approval_date="+tds[11].innerText+"&";
                         front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
 
                         console.log("front_end_data="+front_end_data);
-                        alert("打开F12看前端发送的数据");
+                        // alert("打开F12看前端发送的数据");
                         $.get("user/findOne", {}, function (data) {
                             // 获取当前登陆的用户id
-                            console.log("front_end_data="+front_end_data);
-                            // 把前端数据传给后端
                             $.post("approve/borrowApproveOver", front_end_data, function (data) {
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
                                     alert("提交成功");
+                                    location.reload();
                                     tds[8].innerText = '审核通过';
                                     // 禁用按钮：应该放入点击确认
                                     $(this).attr('disabled',true);
                                     tds.find('.edit-btn').attr('disabled',true);
-                                } else {
-                                    alert("提交失败");
-                                }
+                                    tds.find('.submit-btn').attr('disabled',true);
+                                    tds.find('.not-submit-btn').attr('disabled',true);
+
+                                    $.ajax({
+                                        async: false,  // true 同步，false异步
+                                        data: {order_id: temp_order_id},
+                                        type: "post",
+                                        url : "approve/initBorrowListTable",
+                                        success : function(data) {
+                                            //console.log("--flag-initListTable-");
+                                            temp_list_data=data.data;
+                                            temp_list_data = json2Array(temp_list_data, true)
+                                        }
+                                    });
+                                    // 更新表格数据
+                                    $('#table').dataTable().api().clear();
+                                    $('#table').dataTable().api().rows.add(temp_list_data);
+                                    $('#table').dataTable().api().draw();
+                                } else {}
                             })
                         });  // end of $.get("user/findOne"...
                     } // end of confirm(确认提交申请？)
@@ -500,13 +490,10 @@
                         // 拼后端BeanUtils所需的map串
                         var front_end_data = "";
                         if (tds[0].innerText !== "") front_end_data += "get_or_borrow_requisition_id="+tds[0].innerText+"&";
-                        // if (tds[1].innerText !== "") front_end_data += "purchase_order_id="+tds[1].innerText+"&";
-                        // if (tds[3].innerText !== "") front_end_data += "purpose="+tds[3].innerText+"&";
-                        // if (tds[4].innerText !== "") front_end_data += "requisition_date="+tds[4].innerText+"&";
-                        if (tds[5].innerText !== "") front_end_data += "state="+2+"&";
-                        if (tds[6].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
-                        if (tds[7].innerText !== "") front_end_data += "approval_opinions="+tds[7].innerText+"&";
-                        if (tds[8].innerText !== "") front_end_data += "approval_date="+tds[8].innerText+"&";
+                        if (tds[8].innerText !== "") front_end_data += "state="+3+"&";
+                        if (tds[9].innerText !== "") front_end_data += "approval_user_id="+temp_user_id+"&";
+                        if (tds[10].innerText !== "") front_end_data += "approval_opinions="+tds[10].innerText+"&";
+                        if (tds[11].innerText !== "") front_end_data += "approval_date="+tds[11].innerText+"&";
                         front_end_data = front_end_data.substring(0, front_end_data.length-1);  //删除最后一个字符
 
                         $.get("user/findOne", {}, function (data) {
@@ -517,14 +504,32 @@
                                 console.log("在接受后端数据之后");
                                 if (data.flag) {
                                     alert("提交成功");
+                                    location.reload();
                                     tds[8].innerText = '审核未通过';
                                     // 禁用按钮：应该放入点击确认
                                     $(this).attr('disabled',true);
                                     tds.find('.edit-btn').attr('disabled',true);
+                                    tds.find('.submit-btn').attr('disabled',true);
+                                    tds.find('.not-submit-btn').attr('disabled',true);
+                                    $.ajax({
+                                        async: false,  // true 同步，false异步
+                                        data: {order_id: temp_order_id},
+                                        type: "post",
+                                        url : "approve/initBorrowListTable",
+                                        success : function(data) {
+                                            //console.log("--flag-initListTable-");
+                                            temp_list_data=data.data;
+                                            temp_list_data = json2Array(temp_list_data, true)
+                                        }
+                                    });
+                                    // 更新表格数据
+                                    $('#table').dataTable().api().clear();
+                                    $('#table').dataTable().api().rows.add(temp_list_data);
+                                    $('#table').dataTable().api().draw();
                                 } else {
                                     alert("提交失败");
                                 }
-                            })
+                            });
                         });  // end of $.get("user/findOne"...
                     } // end of confirm(确认提交申请？)
                     else {} //点击取消，无事发生
@@ -549,7 +554,6 @@
 
             //申请表修改保存
             $("#table tbody").on("click",".save-btn",function(){
-                var row=table.row($(this).parents("tr"));
                 var tds=$(this).parents("tr").children();
                 $.each(tds, function(i,val){
                     var jqob=$(val);
